// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`generateGithubActions output matches snapshot 1`] = `
"# Auto-generated by rn-workflows. Do not edit by hand.
# Regenerate with: npx rn-workflows generate

name: rn-workflows • preview

on:
  workflow_dispatch:
  push:
    branches: [develop]

jobs:
  build-android:
    name: Build preview (android)
    runs-on: ubuntu-latest
    steps:
      - name: Checkout
        uses: actions/checkout@v4

      - name: Setup Node
        uses: actions/setup-node@v4
        with:
          node-version: 20
          cache: yarn

      - name: Setup Ruby
        uses: ruby/setup-ruby@v1
        with:
          ruby-version: 3.2
          bundler-cache: true

      - name: Setup JDK
        uses: actions/setup-java@v4
        with:
          distribution: temurin
          java-version: 17

      - name: Install JS dependencies
        run: yarn install --frozen-lockfile

      - name: Expo Prebuild (Android)
        run: npx expo prebuild --platform android --no-install

      - name: Run Fastlane lane preview (android)
        run: bundle exec fastlane android preview
        env:
          FIREBASE_APP_ID_ANDROID: \${{ secrets.FIREBASE_APP_ID_ANDROID }}
          FIREBASE_SERVICE_ACCOUNT_JSON: \${{ secrets.FIREBASE_SERVICE_ACCOUNT_JSON }}
          GRADLE_OPTS: "-Dorg.gradle.jvmargs=-Xmx4g -XX:MaxMetaspaceSize=1g"

"
`;

exports[`generateGithubActions ios output matches snapshot 1`] = `
"# Auto-generated by rn-workflows. Do not edit by hand.
# Regenerate with: npx rn-workflows generate

name: rn-workflows • preview

on:
  workflow_dispatch:
  push:
    branches: [develop]

jobs:
  build-ios:
    name: Build preview (ios)
    runs-on: macos-latest
    steps:
      - name: Checkout
        uses: actions/checkout@v4

      - name: Setup Node
        uses: actions/setup-node@v4
        with:
          node-version: 20
          cache: yarn

      - name: Setup Ruby
        uses: ruby/setup-ruby@v1
        with:
          ruby-version: 3.2
          bundler-cache: true

      - name: Select Xcode
        uses: maxim-lobanov/setup-xcode@v1
        with:
          xcode-version: latest-stable

      - name: Install JS dependencies
        run: yarn install --frozen-lockfile

      - name: Expo Prebuild (iOS)
        run: npx expo prebuild --platform ios --no-install

      - name: Install Pods
        run: cd ios && pod install --repo-update

      - name: Run Fastlane lane preview (ios)
        run: bundle exec fastlane ios preview
        env:
          APPLE_TEAM_ID: \${{ secrets.APPLE_TEAM_ID }}
          APP_STORE_CONNECT_API_KEY_PATH: \${{ secrets.APP_STORE_CONNECT_API_KEY_PATH }}
          MATCH_GIT_URL: \${{ secrets.MATCH_GIT_URL }}
          MATCH_PASSWORD: \${{ secrets.MATCH_PASSWORD }}
          MATCH_GIT_BASIC_AUTHORIZATION: \${{ secrets.MATCH_GIT_BASIC_AUTHORIZATION }}

"
`;
